--- a/data_portal/css/SettingsPage.css
+++ b/data_portal/css/SettingsPage.css
@@ -67,6 +67,12 @@
         margin-top: 1%;
     }
 
+    #wrapper #update-flag-button-close {
+        border-radius: 50%;
+        margin-right: 1%;
+        margin-top: 1%;
+    }
+
     #wrapper img {
         width:250px;
         height:80px;
@@ -104,14 +110,38 @@
         display:none;
         position:fixed;
         background-color:#a8a8a8;
-        overflow:auto
+        overflow:auto;
+    }
+
+    #update-flag-color {
+        width:100%;
+        height:100%;
+        opacity:.9;
+        top:0;
+        left:0;
+        display:none;
+        position:fixed;
+        background-color:#a8a8a8;
+        overflow:auto;
     }
 
     #popupContact{
         align-content: bottom;
     }
 
+    #update-flag-popupContact {
+        align-content: bottom;
+    }
+
     div#popupContact {
+        position:absolute;
+        left:50%;
+        top:17%;
+        margin-left:-202px;
+        font-family:'Raleway',sans-serif
+    }
+
+    div#update-flag-popupContact {
         position:absolute;
         left:50%;
         top:17%;
@@ -129,8 +159,23 @@
         border-radius: 5%;
         border:4px solid #fff;
     }
+    #update-flag-newWindow {
+        width: 800px;
+        padding-top: 15px;
+        padding-bottom: 15px;
+        background-color: #36454F;
+        left: 50%;
+        margin-left: -25%;
+        border-radius: 5%;
+        border:4px solid #fff;
+    }
 
     #button-close{
+        background-color: #e74c3c;
+        color: #ffffff;
+        float: right;
+    }
+    #update-flag-button-close {
         background-color: #e74c3c;
         color: #ffffff;
         float: right;
@@ -154,61 +199,67 @@
     }
 
     /* The switch - the box around the slider */
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 40px;
-  height: 20px;
-}
+    .switch {
+        position: relative;
+        display: inline-block;
+        width: 40px;
+        height: 20px;
+    }
 
-/* Hide default HTML checkbox */
-.switch input {display:none;}
+    /* Hide default HTML checkbox */
+    .switch input {display:none;}
 
-/* The slider */
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
+    /* The slider */
+    .slider {
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #ccc;
+        -webkit-transition: .4s;
+        transition: .4s;
+    }
 
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 17px;
-  width: 17px;
-  left: 1px;
-  bottom: 2px;
-  background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
+    .slider:before {
+        position: absolute;
+        content: "";
+        height: 17px;
+        width: 17px;
+        left: 1px;
+        bottom: 2px;
+        background-color: white;
+        -webkit-transition: .4s;
+        transition: .4s;
+    }
 
-input:checked + .slider {
-  background-color: #E87722;
-}
+    input:checked + .slider {
+        background-color: #E87722;
+    }
 
-input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
-}
+    input:focus + .slider {
+        box-shadow: 0 0 1px #2196F3;
+    }
 
-input:checked + .slider:before {
-  -webkit-transform: translateX(22px);
-  -ms-transform: translateX(22px);
-  transform: translateX(22px);
-}
+    input:checked + .slider:before {
+        -webkit-transform: translateX(22px);
+        -ms-transform: translateX(22px);
+        transform: translateX(22px);
+    }
 
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
-}
+    /* Rounded sliders */
+    .slider.round {
+        border-radius: 34px;
+    }
 
-.slider.round:before {
-  border-radius: 50%;
-}
+    .slider.round:before {
+        border-radius: 50%;
+    }
+
+    #update-flag-p {
+        text-align: center;
+        font-size: 125%;
+        color:white;
+    }
 
