--- a/data_portal/css/SettingsPage.css
+++ b/data_portal/css/SettingsPage.css
@@ -78,6 +78,7 @@
         height:80px;
         margin-left:-2%;
     }
+
     #wrapper h1 {
         color: #ffffff;
         text-align: center;
@@ -138,7 +139,7 @@
         left:50%;
         top:17%;
         margin-left:-202px;
-        font-family:'Raleway',sans-serif
+        font-family:'Raleway',sans-serif;
     }
 
     div#update-flag-popupContact {
@@ -146,7 +147,7 @@
         left:50%;
         top:17%;
         margin-left:-202px;
-        font-family:'Raleway',sans-serif
+        font-family:'Raleway',sans-serif;
     }
 
     #newWindow{
@@ -159,6 +160,7 @@
         border-radius: 5%;
         border:4px solid #fff;
     }
+
     #update-flag-newWindow {
         width: 800px;
         padding-top: 15px;
@@ -175,6 +177,7 @@
         color: #ffffff;
         float: right;
     }
+
     #update-flag-button-close {
         background-color: #e74c3c;
         color: #ffffff;
@@ -261,5 +264,25 @@
         text-align: center;
         font-size: 125%;
         color:white;
+    }
+
+    .card {
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        transition: 0.3s;
+        width: 20%;
+        border-radius: 5px;
+        text-align: center;
+        margin:5px 5px;
+        margin-left: 40%;
+        margin-right: 40%;
+    }
+
+    .card:hover {
+        box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    }
+
+    .container {
+        padding: 2px 16px;
+        width: 50%;
     }
 
