--- a/data_portal/css/SettingsPage.css
+++ b/data_portal/css/SettingsPage.css
@@ -266,23 +266,13 @@
         color:white;
     }
 
-    .card {
-        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-        transition: 0.3s;
-        width: 20%;
-        border-radius: 5px;
-        text-align: center;
-        margin:5px 5px;
-        margin-left: 40%;
-        margin-right: 40%;
-    }
-
-    .card:hover {
-        box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-    }
-
     .container {
         padding: 2px 16px;
         width: 50%;
+    }
+
+    .col-md-1 {
+        width:19.99%;
+        text-align: center;
     }
 
