--- a/data_portal/css/neoregister.css
+++ b/data_portal/css/neoregister.css
@@ -1,5 +1,7 @@
+/* import font from internet */
 @import "http://fonts.googleapis.com/css?family=Raleway";
 @import url('https://fonts.googleapis.com/css?family=Cabin');
+
 body{
   font-family: 'Cabin', sans-serif;
 }
@@ -11,60 +13,55 @@ padding: 20px;
 body {
   font-family:'Raleway',sans-serif;
 }
+
 .input-box{
-
   margin-left: 2%;
-
 }
 
 .input-label {
   color: white;
   margin-left: 32%;
 }
-/*
-The following #abc tag is a style tag that sets the gray backscreen and the opacity of the entire div. Which includes the popupContact.
-*/
+
+/* The following #abc tag is a style tag that sets the gray backscreen and the opacity of the entire div. Which includes the popupContact. */
 #abc {
-width:100%;
-height:100%;
-opacity:.9;
-top:0;
-left:0;
-display:none;
-position:fixed;
-background-color:#a8a8a8;
-overflow:auto
+  width:100%;
+  height:100%;
+  opacity:.9;
+  top:0;
+  left:0;
+  display:none;
+  position:fixed;
+  background-color:#a8a8a8;
+  overflow:auto;
 }
 
 #popupContact2{
   align-content: bottom;
-
 }
 
 #popupContact3{
-align-content: bottom;
-
+  align-content: bottom;
 }
 
 #popupContact4{
-align-content: bottom;
-
+  align-content: bottom;
 }
 
 #popupContact5{
-align-content: bottom;
-
+  align-content: bottom;
 }
+
 #abc2 {
-width:100%;
-height:100%;
-opacity:.9;
-top:0;
-left:0;
-display:none;
-position:fixed;
-background-color:#a8a8a8;
-overflow:auto
+  width:100%;
+  height:100%;
+  opacity:.9;
+  top:0;
+  left:0;
+  display:none;
+  position:fixed;
+  background-color:#a8a8a8;
+  overflow:auto;
 }
 
 #abc3 {
@@ -149,27 +146,23 @@ overflow:auto
 display:none;
 overflow:auto
 }
-/*
-The following is the style for the popout screen.
-*/
+
+/* The following is the style for the popout screen. */
 div#popupContact {
 position:absolute;
 left:50%;
 top:17%;
 margin-left:-202px;
 font-family:'Raleway',sans-serif;
-
 }
-/*
-The following is the styling for the minutes, seconds, and miliseconds part of the popup screen
-*/
+
+/* The following is the styling for the minutes, seconds, and miliseconds part of the popup screen */
 #timeStamp{
   text-align: center;
   color: #ffffff
 }
-/*
-  The following the style for the start button.
-*/
+
+/* The following the style for the start button. */
 #button-start {
 text-decoration:none;
 width:50%;
@@ -179,7 +172,6 @@ display:block;
 background-color:#2ecc71;
 color:#fff;
 border:1px solid #FFCB00;
-
 font-size:20px;
 cursor:pointer;
 border-radius:5px
@@ -189,18 +181,14 @@ border-radius:5px
   align-content: bottom;
   z-index: 1;
 }
+
 #wrapper{
   text-align: center;
   align-content: center;
-
-
-
 }
-/*
-  The following the style for the stop button.
-*/
-#button-stop {
 
+/* The following the style for the stop button */
+#button-stop {
 text-decoration:none;
 width:50%;
 margin-left: 25%;
@@ -209,14 +197,12 @@ display:block;
 background-color:#e74c3c;
 color:#fff;
 border:1px solid #FFCB00;
-
 font-size:20px;
 cursor:pointer;
 border-radius:5px
 }
-/*
-  The following the style for the stop button.
-*/
+
+/* The following the style for the stop button. */
 #button-reset{
 text-decoration:none;
 width:50%;
@@ -226,14 +212,12 @@ display:block;
 background-color:#e9d460;
 color:#fff;
 border:1px solid #FFCB00;
-
 font-size:20px;
 cursor:pointer;
 border-radius:5px
 }
-/*
-  The following the style for the button that comes out.
-*/
+
+/* The following the style for the button that comes out. */
 #newWindow{
   width: 800px;
   padding-top: 15px;
@@ -243,61 +227,50 @@ border-radius:5px
   margin-left: -25%;
   border-radius: 5%;
   border:4px solid #fff;
-
 }
-/*
-  The following closes the popout screen.
-*/
+
+/* The following closes the popout screen. */
 #button-close{
   background-color: #e74c3c;
   color: #ffffff;
   float: right;
 }
+
 #wrapper{
   text-align: center;
   align-content: center;
-
 }
 
-}
 #content{
   margin-top: 50%;
 }
+
 #graphic{
   border:5px solid #fff;
 }
-h1
-{
+
+h1 {
   margin-left: -5%;
-    color: black;
-    text-align: center;
-    font-size: 72px ;
-    font-family:'Raleway',sans-serif;
+  color: black;
+  text-align: center;
+  font-size: 72px ;
+  font-family:'Raleway',sans-serif;
 }
 
-p
-{
+p {
   text-align: center;
 }
 
-.cardcolor
-{
+.cardcolor {
 color: #FFB732;
 text-align: center;
 background: #FFB732;
 width: 450px;
 height: 110px;
 border-radius: 38px;
-
-
-}
-.w3-hover-opacity
-{
-
 }
 
-.w3-panel
-{
+.w3-panel {
   color: white ;
   font-size: 30px;
   font-family:'Raleway',sans-serif;
@@ -307,14 +280,12 @@ border-radius: 38px;
   padding-bottom: 5px;
 }
 
-span
-{
+span {
   font-family:'Raleway',sans-serif;
   text-align: center;
-
 }
-.glyphicon
-{
+
+.glyphicon {
   color: black;
   font-size: 42px;
   float: left;
@@ -331,36 +302,30 @@ right: -15px;
 }
 
 #verticalLine{
-
   width: 1px;
   height: 80%;
   background-color: silver;
   margin-left: 1%;
   margin-right: 1%;
   margin-top: 3.5%;
-
 }
 
 #verticalLine2{
-
   width: 1px;
   height: 80%;
   background-color: silver;
   margin-left: 1%;
   margin-right: 1%;
   margin-top: 1%;
-
 }
 
 .glyphicon
 {
-
   font-size: 100px;
   float: right;
   color: white;
   padding-top: 25px;
   padding-left: 25px;
-
 }
 
 #register_bar .glyphicon{
@@ -382,22 +347,16 @@ right: -15px;
   font-size: 42px;
   float: left;
   margin-left: 15px;
-
-
 }
 
 .glyphiconbar
 {
-
   font-size: 50px;
   float: right;
   color: black;
   padding-top: 25px;
   padding-left: 25px;
-
 }
-
-
 
 .overlay {
 height: 0%;
@@ -431,17 +390,12 @@ display: block;
 transition: 0.3s;
 }
 
-.overlay button:hover, .overlay button:focus {
-
-}
-
 .overlay .closebtn {
 position: absolute;
 top: 20px;
 right: 45px;
 font-size: 60px;
 }
-
 
 @media screen and (max-height: 450px) {
 .overlay {overflow-y: auto;}
