--- a/data_portal/css/register.css
+++ b/data_portal/css/register.css
@@ -1,7 +1,5 @@
 @import "http://fonts.googleapis.com/css?family=Raleway";
 
-
-
 .container {
 padding: 20px;
 }
@@ -9,8 +7,8 @@ padding: 20px;
 body {
   font-family:'Raleway',sans-serif;
 }
-.input-box{
 
+.input-box{
   margin-left: 2%;
 
 }
@@ -19,19 +17,18 @@ body {
   color: white;
   margin-left: 32%;
 }
-/*
-The following #abc tag is a style tag that sets the gray backscreen and the opacity of the entire div. Which includes the popupContact.
-*/
+
+/* The following #abc tag is a style tag that sets the gray backscreen and the opacity of the entire div. Which includes the popupContact. */
 #abc {
-width:100%;
-height:100%;
-opacity:.9;
-top:0;
-left:0;
-display:none;
-position:fixed;
-background-color:#a8a8a8;
-overflow:auto
+  width:100%;
+  height:100%;
+  opacity:.9;
+  top:0;
+  left:0;
+  display:none;
+  position:fixed;
+  background-color:#a8a8a8;
+  overflow:auto
 }
 
 #popupContact2{
@@ -40,199 +37,184 @@ overflow:auto
 }
 
 #popupContact3{
-align-content: bottom;
-
+  align-content: bottom;
 }
 
 #popupContact4{
-align-content: bottom;
-
+  align-content: bottom;
 }
 
 #popupContact5{
-align-content: bottom;
-
+  align-content: bottom;
 }
+
 #abc2 {
-width:100%;
-height:100%;
-opacity:.9;
-top:0;
-left:0;
-display:none;
-position:fixed;
-background-color:#a8a8a8;
-overflow:auto
+  width:100%;
+  height:100%;
+  opacity:.9;
+  top:0;
+  left:0;
+  display:none;
+  position:fixed;
+  background-color:#a8a8a8;
+  overflow:auto;
 }
 
 #abc3 {
-width:100%;
-height:100%;
-opacity:.9;
-top:0;
-left:0;
-display:none;
-position:fixed;
-background-color:#a8a8a8;
-overflow:auto
+  width:100%;
+  height:100%;
+  opacity:.9;
+  top:0;
+  left:0;
+  display:none;
+  position:fixed;
+  background-color:#a8a8a8;
+  overflow:auto;
 }
 
 #abc4 {
-width:100%;
-height:100%;
-opacity:.9;
-top:0;
-left:0;
-display:none;
-position:fixed;
-background-color:#a8a8a8;
-overflow:auto
+  width:100%;
+  height:100%;
+  opacity:.9;
+  top:0;
+  left:0;
+  display:none;
+  position:fixed;
+  background-color:#a8a8a8;
+  overflow:auto;
 }
 
 #abc5 {
-width:100%;
-height:100%;
-opacity:.9;
-top:0;
-left:0;
-display:none;
-position:fixed;
-background-color:#a8a8a8;
-overflow:auto
+  width:100%;
+  height:100%;
+  opacity:.9;
+  top:0;
+  left:0;
+  display:none;
+  position:fixed;
+  background-color:#a8a8a8;
+  overflow:auto;
 }
 
 div#popupContact2 {
-position:absolute;
-left:50%;
-top:17%;
-margin-left:-202px;
-font-family:'Raleway',sans-serif
+  position:absolute;
+  left:50%;
+  top:17%;
+  margin-left:-202px;
+  font-family:'Raleway',sans-serif;
 }
 
 div#popupContact3 {
-position:absolute;
-left:50%;
-top:17%;
-margin-left:-202px;
-font-family:'Raleway',sans-serif
+  position:absolute;
+  left:50%;
+  top:17%;
+  margin-left:-202px;
+  font-family:'Raleway',sans-serif;
 }
 
 div#popupContact4 {
-position:absolute;
-left:50%;
-top:17%;
-margin-left:-202px;
-font-family:'Raleway',sans-serif
+  position:absolute;
+  left:50%;
+  top:17%;
+  margin-left:-202px;
+  font-family:'Raleway',sans-serif;
 }
 
 div#popupContact5 {
-position:absolute;
-left:50%;
-top:17%;
-margin-left:-202px;
-font-family:'Raleway',sans-serif
+  position:absolute;
+  left:50%;
+  top:17%;
+  margin-left:-202px;
+  font-family:'Raleway',sans-serif;
 }
 
 #nfc-avail {
-display:block;
-overflow:auto
+  display:block;
+  overflow:auto;
 }
 
 #new-appointment {
-display:block;
-overflow:auto
+  display:block;
+  overflow:auto;
 }
 
 #registerNFC {
-display:none;
-overflow:auto
+  display:none;
+  overflow:auto;
 }
-/*
-The following is the style for the popout screen.
-*/
-div#popupContact {
-position:absolute;
-left:50%;
-top:17%;
-margin-left:-202px;
-font-family:'Raleway',sans-serif;
 
+/* The following is the style for the popout screen. */
+div#popupContact {
+  position:absolute;
+  left:50%;
+  top:17%;
+  margin-left:-202px;
+  font-family:'Raleway',sans-serif;
 }
-/*
-The following is the styling for the minutes, seconds, and miliseconds part of the popup screen
-*/
+
+/* The following is the styling for the minutes, seconds, and miliseconds part of the popup screen */
 #timeStamp{
   text-align: center;
-  color: #ffffff
+  color: #ffffff;
 }
-/*
-  The following the style for the start button.
-*/
+
+/* The following the style for the start button. */
 #button-start {
-text-decoration:none;
-width:50%;
-margin-left: 25%;
-text-align:center;
-display:block;
-background-color:#2ecc71;
-color:#fff;
-border:1px solid #FFCB00;
-
-font-size:20px;
-cursor:pointer;
-border-radius:5px
+  text-decoration:none;
+  width:50%;
+  margin-left: 25%;
+  text-align:center;
+  display:block;
+  background-color:#2ecc71;
+  color:#fff;
+  border:1px solid #FFCB00;
+  font-size:20px;
+  cursor:pointer;
+  border-radius:5px;
 }
 
-#popupContact{
+#popupContact {
   align-content: bottom;
   z-index: 1;
 }
-#wrapper{
+
+#wrapper {
   text-align: center;
   align-content: center;
-
-
-
 }
-/*
-  The following the style for the stop button.
-*/
+
+/* The following the style for the stop button. */
 #button-stop {
-
-text-decoration:none;
-width:50%;
-margin-left: 25%;
-text-align:center;
-display:block;
-background-color:#e74c3c;
-color:#fff;
-border:1px solid #FFCB00;
-
-font-size:20px;
-cursor:pointer;
-border-radius:5px
+  text-decoration:none;
+  width:50%;
+  margin-left: 25%;
+  text-align:center;
+  display:block;
+  background-color:#e74c3c;
+  color:#fff;
+  border:1px solid #FFCB00;
+  font-size:20px;
+  cursor:pointer;
+  border-radius:5px;
 }
-/*
-  The following the style for the stop button.
-*/
-#button-reset{
-text-decoration:none;
-width:50%;
-margin-left: 25%;
-text-align:center;
-display:block;
-background-color:#e9d460;
-color:#fff;
-border:1px solid #FFCB00;
 
-font-size:20px;
-cursor:pointer;
-border-radius:5px
+/* The following the style for the stop button. */
+#button-reset {
+  text-decoration:none;
+  width:50%;
+  margin-left: 25%;
+  text-align:center;
+  display:block;
+  background-color:#e9d460;
+  color:#fff;
+  border:1px solid #FFCB00;
+  font-size:20px;
+  cursor:pointer;
+  border-radius:5px;
 }
-/*
-  The following the style for the button that comes out.
-*/
-#newWindow{
+
+/* The following the style for the button that comes out. */
+#newWindow {
   width: 800px;
   padding-top: 15px;
   padding-bottom: 15px;
@@ -243,59 +225,50 @@ border-radius:5px
   border:4px solid #fff;
 
 }
-/*
-  The following closes the popout screen.
-*/
-#button-close{
+
+/* The following closes the popout screen. */
+#button-close {
   background-color: #e74c3c;
   color: #ffffff;
   float: right;
 }
-#wrapper{
+
+#wrapper {
   text-align: center;
   align-content: center;
 
 }
 
-}
-#content{
+#content {
   margin-top: 50%;
 }
-#graphic{
+
+#graphic {
   border:5px solid #fff;
 }
-h1
-{
+
+h1 {
   margin-left: -5%;
-    color: black;
-    text-align: center;
-    font-size: 72px ;
-    font-family:'Raleway',sans-serif;
+  color: black;
+  text-align: center;
+  font-size: 72px ;
+  font-family:'Raleway',sans-serif;
 }
 
-p
-{
+p {
   text-align: center;
 }
 
-.cardcolor
-{
-color: #FFB732;
-text-align: center;
-background: #FFB732;
-width: 450px;
-height: 110px;
-border-radius: 38px;
-
-
-}
-.w3-hover-opacity
-{
-
+.cardcolor {
+  color: #FFB732;
+  text-align: center;
+  background: #FFB732;
+  width: 450px;
+  height: 110px;
+  border-radius: 38px;
 }
 
-.w3-panel
-{
+.w3-panel {
   color: white ;
   font-size: 30px;
   font-family:'Raleway',sans-serif;
@@ -305,25 +278,23 @@ border-radius: 38px;
   padding-bottom: 5px;
 }
 
-span
-{
+span {
   font-family:'Raleway',sans-serif;
   text-align: center;
 
 }
-.glyphicon
-{
+.glyphicon {
   color: black;
   font-size: 42px;
   float: left;
   margin-left: 15px;
 }
 
-/**
+/*
 * Override feedback icon position
 * See http://formvalidation.io/examples/adjusting-feedback-icon-position/
 */
 #eventForm .form-control-feedback {
-top: 0;
-right: -15px;
+  top: 0;
+  right: -15px;
 }
