--- a/data_portal/css/NPS.CSS
+++ b/data_portal/css/NPS.CSS
@@ -1,3 +1,5 @@
+/* -------------------------------------------------------- CSS FOR NPS HTML PAGE ------------------------------------------------- */
+
 @import "http://fonts.googleapis.com/css?family=Raleway";
 
     hr {
