--- a/data_portal/css/SettingsPage.css
+++ b/data_portal/css/SettingsPage.css
@@ -1,3 +1,5 @@
+/* -------------------------------------------------------- CSS FOR SettingsPage HTML PAGE ------------------------------------------------- */
+
 @import "http://fonts.googleapis.com/css?family=Raleway";
 
     hr {
