--- a/data_portal/css/neoregister.css
+++ b/data_portal/css/neoregister.css
@@ -1,3 +1,5 @@
+/* -------------------------------------------------------- CSS FOR neoregister HTML PAGE ------------------------------------------------- */
+
 /* import font from internet */
 @import "http://fonts.googleapis.com/css?family=Raleway";
 @import url('https://fonts.googleapis.com/css?family=Cabin');
