--- a/data_portal/css/register.css
+++ b/data_portal/css/register.css
@@ -1,3 +1,9 @@
+/* -------------------------------------------------------- CSS FOR register HTML PAGE ------------------------------------------------- */
+
+/* ------------------------------------------------------ */
+/*   This page has been replaced by the neoregister HTML  */
+/* ------------------------------------------------------ */
+
 @import "http://fonts.googleapis.com/css?family=Raleway";
 
 .container {
