--- a/data_portal/css/stats.css
+++ b/data_portal/css/stats.css
@@ -1,3 +1,5 @@
+/* -------------------------------------------------------- CSS FOR stats HTML PAGE ------------------------------------------------- */
+
 /* import font from the internet */
 @import "http://fonts.googleapis.com/css?family=Raleway";
 @import url('https://fonts.googleapis.com/css?family=Cabin');
